Create transition to appear calendar

--- a/src/main.css
+++ b/src/main.css
@@ -167,3 +167,26 @@ body {
 .nav-container input[type="checkbox"]:checked ~ .logo{
   display: none;
 }
+
+
+
+@keyframes appear { 
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.section{
+  display: block;
+  animation: appear 2s;
+}
+
+.hidden {
+  transition: all .5s ease-in-out;
+  opacity: 0;
+  display: none;
+}
