--- a/src/main.css
+++ b/src/main.css
@@ -37,6 +37,8 @@ body {
 .navbar {
   width: 100%;
   box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+  background-color: #009933;
+  
 }
 
 .nav-container {
@@ -102,7 +104,7 @@ body {
   height: 4px;
   width: 100%;
   border-radius: 10px;
-  background: #0e2431;
+  background: white;
 }
 
 .nav-container .hamburger-lines .line1 {
@@ -121,7 +123,6 @@ body {
 
 .navbar .menu-items {
   padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
@@ -144,7 +145,7 @@ body {
   top: 5px;
   right: 15px;
   font-size: 1.2rem;
-  color: #0e2431;
+  color: white;
 }
 
 .nav-container input[type="checkbox"]:checked ~ .menu-items {
@@ -164,7 +165,7 @@ body {
 }
 
 .nav-container input[type="checkbox"]:checked ~ .logo{
-  display: none;
+  z-index: 5;
 }
 
 
@@ -194,4 +195,16 @@ body {
 
 #calendar{
   margin: 0 auto;
+}
+
+.square a {
+  margin: 0;
+  padding: 0;
+}
+
+.square b {
+  color: white;
+  padding: 12px 60px 12px 60px;
+  background-color: #009933;
+  border-radius: 25px;
 }
