--- a/src/main.css
+++ b/src/main.css
@@ -208,3 +208,5 @@ body {
   background-color: #009933;
   border-radius: 25px;
 }
+
+@media screen and (max-width:767px) { .fc-toolbar.fc-header-toolbar {font-size: 60%}}
