--- a/src/main.css
+++ b/src/main.css
@@ -209,4 +209,9 @@ body {
   border-radius: 25px;
 }
 
+#calendar button{
+  background-color: #00a651;
+  border-color: #009933;
+}
+
 @media screen and (max-width:767px) { .fc-toolbar.fc-header-toolbar {font-size: 60%}}
