Add title in absences page

--- a/assets/styles/absences.scss
+++ b/assets/styles/absences.scss
@@ -1,6 +1,8 @@
-#jsGrid {
+.content {
     margin: 0 auto;
+    text-align: center;
 }
-.bg-green {
-    background-color: red !important;
+
+#jsGrid {
+    padding-top: 3%;
 }
