Rename scss file

--- a/assets/absences.scss
+++ b/assets/absences.scss
@@ -4,6 +4,6 @@
 @import "~jsgrid/dist/jsgrid";
 
 @import "./styles/variables.scss";
-@import "./styles/hamburger.scss";
+@import "./styles/_hamburger.scss";
 @import "./styles/global.scss";
-@import "./styles/absences.scss";
+@import "./styles/_absences.scss";
