Fix response navbar username

--- a/assets/styles/_calendar.scss
+++ b/assets/styles/_calendar.scss
@@ -20,4 +20,8 @@
     .fc-event-time {
         background-color: $secondary-color;
     }
+
+    .fc-timegrid-axis-cushion {
+        font-size: 80%;
+    }
 }
