--- a/assets/styles/_hamburger.scss
+++ b/assets/styles/_hamburger.scss
@@ -1,3 +1,15 @@
+@media screen and (max-width: 400px) {
+    .logo h1 {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 336px) {
+    .logo h1 {
+        font-size: 20px;
+    }
+}
+
 .container {
     max-width: 1050px;
     width: 90%;
@@ -54,6 +66,7 @@
         right: 15px;
         font-size: 1.2rem;
         color: $terciary-color;
+        padding-left: 55px;
     }
 }
 
